--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "donuuvlsg",
+    "ApiKey": "614717489471553",
+    "ApiSecret": "WitCVRwEZYFq5Ld3RxcP40d1Ftc"
+  },
   "AllowedHosts": "*"
 }
